--- a/MyGopigo/app/src/main/res/layout/activity_main.xml
+++ b/MyGopigo/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.amelrekkab.mygopigo.MainActivity" >
+    tools:context="com.example.amelrekkab.mygopigo.MainActivity"
+    android:background="@drawable/systeme">
 
     <LinearLayout
         android:id="@+id/linearLayout1"
@@ -21,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:text="VOIRE LES STATISTIQUES" />
+            android:text="VOIR LES STATISTIQUES" />
 
         <Button
             android:text="Avancer"
@@ -30,7 +31,7 @@
             android:id="@+id/button" />
 
         <Button
-            android:text="RECULLER "
+            android:text="RECULER "
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/button2" />
