--- a/MyGopigo/app/src/main/res/layout/stat.xml
+++ b/MyGopigo/app/src/main/res/layout/stat.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="18dp" >
+    android:paddingLeft="18dp"
+    android:background="@drawable/systeme">
 
 
     <Button
@@ -11,6 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button5" />
+    <Button
+        android:id="@+id/btnData"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left|right"
+        android:text="Gestion de Donneés " />
 
     <LinearLayout
         android:layout_width="match_parent"
